replace some flex to grid(grid so goooood)

--- a/src/components/AnimeCatalog/AnimeCatalog.module.css
+++ b/src/components/AnimeCatalog/AnimeCatalog.module.css
@@ -1,8 +1,9 @@
 .animeCatalogWrapper{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 15px;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    row-gap: 1rem;
+
+    justify-items: center;
 }
 
 
