--- a/src/pages/ReleasesPage/ReleasesPage.module.css
+++ b/src/pages/ReleasesPage/ReleasesPage.module.css
@@ -15,6 +15,9 @@
 
 .catalogWrapper{
     border-radius: 10px;
+    flex-grow: 1;
+    background: #161616;
+    padding: 20px 10px;
 }
 
 @media screen and (min-width: 320px) and (max-width: 768px){
