--- a/src/pages/SchedulePage/SchedulePage.module.css
+++ b/src/pages/SchedulePage/SchedulePage.module.css
@@ -1,6 +1,7 @@
 .contentWrapper{
     display: flex;
     gap: 30px;
+    padding: 10px;
 }
 
 .animeCatalog{
@@ -24,4 +25,10 @@
     padding: 15px;
     background: #161616;
     border-radius: 10px;
+}
+
+@media screen and (min-width: 320px) and (max-width: 768px){
+    .recentUpdates{
+        display: none;
+    }
 }
