--- a/src/components/ui/AnimeCard/AnimeCard.module.css
+++ b/src/components/ui/AnimeCard/AnimeCard.module.css
@@ -34,16 +34,16 @@
 
 .animeEpisodesCount{
     color: #dbdbdb;
-    font-size: .4rem;
+    font-size: 10px;
     font-weight: 300;
     border-radius: 8px;
-    padding: 5px;
+    padding: 10px;
     background: rgba(76,76,76,.65);
 }
 
 .animeTitle{
     color: white;
-    font-size: .6rem;
+    font-size: 15px;
     font-weight: 400;
     letter-spacing: 1px;
 }
@@ -78,5 +78,25 @@
     .cardWrapper{
         width: 141px;
         height: 189px;
+    }
+
+    .animeTitle{
+        font-size: .65rem;
+        font-weight: 500;
+    }
+
+    .animeEpisodesCount{
+        padding: 5px;
+        font-size: .5rem;
+        font-weight: 400;
+    }
+
+
+    .watchAnimeButton{
+        padding: 7px;
+    }
+
+    .WatchListButton{
+        display: none;
     }
 }
