--- a/src/components/Popup/Popup.module.css
+++ b/src/components/Popup/Popup.module.css
@@ -15,13 +15,22 @@
 }
 
 .popupContent{
+	padding: 1rem;
+
 	width: 50%;
-	height: 75%;
-	
+	height: 20rem;
+	overflow-y: auto;
+
 	background: #161616;
 	border-radius: 10px;
 
-	padding: 35px;
-
 	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+}
+
+.contentWrapper{
+	display: flex;
+	align-items: center;
+	gap: .75rem;
 }
