--- a/src/components/ui/DropDown/DropDown.module.css
+++ b/src/components/ui/DropDown/DropDown.module.css
@@ -1,16 +1,12 @@
 .dropdown{
-	position: relative;
-	display: flex;
-	flex-direction: column;
+	display: grid;
+	grid-template-columns: 0fr;
 }
 
 .menu{
 	list-style-type: none;
-	margin: 5px 0;
-
+	/* margin: 5px 0; */
 	border: 3px solid #101010;
-
-	width: 150px;
 }
 
 .menu > li{
