--- a/src/components/Popup/Popup.module.css
+++ b/src/components/Popup/Popup.module.css
@@ -26,11 +26,16 @@
 
 	display: flex;
 	flex-direction: column;
-	gap: 1rem;
+	gap: 1.45rem;
 }
 
-.contentWrapper{
+.dropdownsMenu{
 	display: flex;
-	align-items: center;
+	align-items: start;
 	gap: .75rem;
+}
+
+.currentEditTitle{
+	font-weight: 500;
+	color: white;
 }
