--- a/src/components/ui/DropDown/DropDown.module.css
+++ b/src/components/ui/DropDown/DropDown.module.css
@@ -5,13 +5,22 @@
 
 .menu{
 	list-style-type: none;
-	/* margin: 5px 0; */
-	border: 3px solid #101010;
+	margin: 3px 0;
 }
 
 .menu > li{
 	padding: 5px;
 	background-color: #222222;
+}
+
+.menu > li:first-child{
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+}
+
+.menu > li:last-child{
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
 }
 
 .menu > li:hover{
