--- a/src/components/Popup/Popup.module.css
+++ b/src/components/Popup/Popup.module.css
@@ -39,3 +39,18 @@
 	font-weight: 500;
 	color: white;
 }
+
+@media screen and (min-width: 320px) and (max-width: 768px){
+	.popupWrapper{
+		padding: 10px;
+	}
+
+	.popupContent{
+		width: 100%;
+		height: 55%;
+	}
+
+	.currentEditTitle{
+		font-size: 1rem;
+	}
+}
