--- a/src/components/Popup/Popup.module.css
+++ b/src/components/Popup/Popup.module.css
@@ -10,6 +10,7 @@
 	background: rgba(0,0,0,.7);
 	
 	display: flex;
+	flex-direction: column;
 	align-items: center;
 	justify-content: center;
 }
@@ -17,7 +18,7 @@
 .popupContent{
 	padding: 1rem;
 
-	width: 50%;
+	width: 60%;
 	height: 20rem;
 	overflow-y: auto;
 
